<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ThemBaiVietActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/KhungThemBaiViet"
        android:layout_centerInParent="true"
        android:background="@drawable/radius_textview"
        android:padding="20dp"
        android:text="@string/themthongtinbaiviet"
        android:textSize="@dimen/size25sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/KhungThemBaiViet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        >
        <EditText
            android:id="@+id/edTieuDeBaiViet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhaptieude"
            android:minHeight="48dp"
            android:inputType="text"
            android:textSize="@dimen/size25sp"
            android:singleLine="true"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_border"
            />
        <EditText
            android:id="@+id/edNoiDungBaiViet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapnoidung"
            android:minHeight="48dp"
            android:inputType="text"
            android:textSize="@dimen/size25sp"
            android:singleLine="true"
            android:padding="@dimen/size10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_border"
            />
        <Button
            android:id="@+id/btnThemBaiViet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/rounded_button_logup"
            />
    </LinearLayout>

</RelativeLayout>