<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_variant"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".DangKyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/KhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size16dp"
        android:layout_marginTop="@dimen/size16dp"
        android:layout_marginEnd="@dimen/size16dp"
        android:layout_marginBottom="@dimen/size16dp"
        android:padding="@dimen/size16dp"
        android:text="@string/dangky"
        android:textSize="@dimen/size32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/KhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edTenDNDangKY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:minHeight="48dp"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#757575"

            />

        <EditText
            android:id="@+id/edMKDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <RadioGroup
            android:id="@+id/grGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioitinh"
                android:textSize="@dimen/size16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48dp"
                android:text="Nam"
                android:textSize="@dimen/size16sp" />

            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size16dp"
                android:minHeight="48dp"
                android:text="Nữ"
                android:textSize="@dimen/size16sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/ngaysinh"
            android:minHeight="48dp"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/edCMNDDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/card"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/chungminh"
            android:inputType="number"
            android:maxLength="12"
            android:minHeight="48dp"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDongY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size16dp"
                android:layout_marginRight="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:padding="@dimen/size10dp"
                android:text="@string/dongy"
                android:textSize="@dimen/size20sp" />

            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size10dp"
                android:layout_marginTop="@dimen/size16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_exit"
                android:padding="@dimen/size10dp"
                android:text="@string/Thoát"
                android:textSize="@dimen/size20sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>